Add label and input to footer and modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,10 @@ body {
   margin-right: 70px;
 }
 
+.footer-social {
+  margin-right: 154px;
+}
+
 .footer-title {
   margin: 0;
   padding: 0;
@@ -538,6 +542,30 @@ body {
 .social-link:focus {
   background-color: var(--accent-color);
 }
+
+.mailing-list {
+  display: flex;
+}
+
+.footer-input {
+  padding-left: 16px;
+  width: 358px;
+
+  background-color: var(--footer-bgr-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.mailing-send {
+  margin-left: 10px;
+  margin-right: 18px;
+}
 /* ПОРТФОЛИО */
 
 .portfolio {
@@ -545,12 +573,6 @@ body {
   flex-wrap: wrap;
   gap: 30px;
 }
-
-/* .btn-list:hover,
-.btn-list:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
 
 .portfolio-list {
   flex-basis: calc((100% - 60px) / 3);
@@ -687,6 +709,59 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.btn-sub {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  border-radius: 4px;
+  padding: 10px 10px 10px 29px;
+  margin-left: 12px;
+
+  color: var(--primery-bg-color);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-send-btn {
+  display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0px;
+  border-radius: 4px;
+  padding: 10px 55px;
+
+  color: var(--primery-bg-color);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-send-btn:hover,
+.modal-send-btn:focus {
+  background-color: var(--button-bgr-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 /* Modal window */
 .backdrop {
   position: fixed;
@@ -733,7 +808,7 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn {
+.modal-close-btn {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -751,4 +826,71 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--primery-bg-color);
+}
+
+.modal-title {
+  margin: 0;
+  padding: 0;
+  padding: 40px;
+  padding-bottom: 10px;
+
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--tittle-color);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+
+.form-group input {
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.policy {
+  display: inline;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+textarea {
+  margin: 0;
+  padding: 0;
+  padding: 15px;
+  height: 120px;
+  resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.policy a {
+  color: var(--accent-color);
+}
+
+.form-group textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
