--- a/css/styles.css
+++ b/css/styles.css
@@ -562,6 +562,10 @@ body {
   line-height: 1.25;
 }
 
+.footer-input:focus {
+  color: var(--primery-bg-color);
+}
+
 .mailing-send {
   margin-left: 10px;
   margin-right: 18px;
@@ -793,7 +797,7 @@ body {
 .modal {
   position: relative;
   width: 528px;
-  height: 536px;
+  height: 581px;
 
   top: 50%;
   left: 50%;
@@ -828,6 +832,12 @@ body {
   background-color: var(--primery-bg-color);
 }
 
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: var(--accent-color);
+  outline: none;
+}
+
 .modal-title {
   margin: 0;
   padding: 0;
@@ -843,6 +853,8 @@ body {
 }
 
 .form-group {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   margin-left: 40px;
@@ -850,7 +862,7 @@ body {
   margin-bottom: 10px;
 }
 
-.form-group label {
+.form-group .modal-label {
   margin-bottom: 4px;
 
   font-size: 12px;
@@ -858,18 +870,31 @@ body {
   letter-spacing: 0.01em;
 }
 
-.form-group input {
+.form-group .modal-input {
   height: 40px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  padding-left: 42px;
+  outline: transparent;
 }
 
-.policy {
-  display: inline;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+.form-icon {
+  position: absolute;
+  top: 29px;
+  left: 12px;
+}
+
+.form-group input:focus {
+  border: 1px solid #2196f3;
+}
+
+.form-group:focus-within .form-icon {
+  fill: var(--accent-color);
+}
+
+.form-policy {
+  margin-left: 54px;
 }
 
 textarea {
@@ -881,9 +906,14 @@ textarea {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: transparent;
 }
 
-.policy a {
+textarea:focus {
+  border: 1px solid #2196f3;
+}
+
+label a {
   color: var(--accent-color);
 }
 
